--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -127,15 +127,16 @@
         <!-- End: Template for Shopping List (element Listview)-->
         <!--Start: Meal planning Page Template for day listboxes-->
         <DataTemplate x:Key="MealsListBoxTemplate">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                
-                <Label Content="{Binding Title}"/>
-                <Label Content="{Binding Persons}" Grid.Row="1"/>
-            </Grid>
+            <WrapPanel>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Label Content="{Binding Title}"/>
+                    <Label Content="{Binding Persons}" ContentStringFormat="This meal is planned for {0} person(s)" Grid.Row="1"/>
+                </Grid>
+            </WrapPanel>
         </DataTemplate>
         <!--End: Meal planning Page Template for day listboxes-->
     </Application.Resources>
