--- a/FoodPlanner/FoodPlanner/Views/RecipeSearchPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipeSearchPage.xaml
@@ -4,7 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-      xmlns:ViewModels="clr-namespace:FoodPlanner.ViewModels" x:Class="FoodPlanner.Views.Recipes" 
+      xmlns:local="clr-namespace:FoodPlanner"
+      xmlns:ViewModels="clr-namespace:FoodPlanner.ViewModels" x:Class="FoodPlanner.Views.RecipeSearchPage" 
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="405"
 	Title="Recipes">
@@ -37,7 +38,7 @@
         <ListBox Name="recipeListBox" Grid.Row="1" Grid.ColumnSpan="3" ItemTemplate="{StaticResource ListRecipesTemplate}"  ItemsSource="{Binding Path=listOfSearchResults, Mode=OneWay}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseUp">
-                    <i:InvokeCommandAction Command="{Binding GoToRecipeCommand}" CommandParameter="{Binding SelectedItem,  RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}"   />
+                    <i:InvokeCommandAction Command="{Binding Source={x:Static local:Navigator.GoToRecipeCommand}}" CommandParameter="{Binding SelectedItem.recipe, RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}"   />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </ListBox>
