--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -4,10 +4,19 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="720" d:DesignWidth="405"
 	Title="SettingsPage">
 
     <Grid>
-        
+        <ListBox Grid.Row="1" Grid.RowSpan="8" Grid.ColumnSpan="1" Margin="2,-2,2,2"/>
+        <ListBox x:Name="Example1" Grid.Row="1" Grid.Column="1">
+            <Expander Header="User">
+                <TextBlock>GAAAAAY</TextBlock>
+               
+            </Expander>
+            <Expander>
+                <TextBlock>JAAAAAY</TextBlock>
+            </Expander>
+        </ListBox>
     </Grid>
 </Page>
