--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:FoodPlanner"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <!--Brushes used in templates-->
@@ -133,6 +134,12 @@
                         <i:InvokeCommandAction Command="{Binding GoToRecipeCommand}" CommandParameter="{Binding SelectedItem,  RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}" />
                     </i:EventTrigger>
                 </i:Interaction.Triggers>-->
+
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseUp">
+                        <i:InvokeCommandAction Command="{Binding Source={x:Static local:Navigator.GoToRecipeCommand}}" CommandParameter="{Binding SelectedItem.Recipe, RelativeSource={RelativeSource AncestorType={x:Type ListBox}}}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
