--- a/FoodPlanner/FoodPlanner/Views/RecipeSearchPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipeSearchPage.xaml
@@ -11,7 +11,7 @@
 	Title="Recipes">
  
     <Page.DataContext>
-        <ViewModels:RecipesViewModel/>
+        <ViewModels:RecipeSearchViewModel/>
     </Page.DataContext>
 
     <Grid>
