--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -124,6 +124,16 @@
         <DataTemplate x:Key="ShoppingListUnitCell">
             <TextBlock Text="{Binding Path=Ingredient.Unit}" Foreground="Black"/>
         </DataTemplate>
+        <DataTemplate x:Key="ShoppingListUnitAndQuantityCell">
+            <TextBlock Foreground="Black">
+                <TextBlock.Text>
+                    <MultiBinding StringFormat="{}{1} {0}">
+                        <Binding Path="Ingredient.Unit" />
+                        <Binding Path="Quantity" />
+                    </MultiBinding>
+                </TextBlock.Text>
+            </TextBlock>
+        </DataTemplate>
         <!-- End: Template for Shopping List (element Listview)-->
 
         <!--Start: Meal planning Page Template for day listboxes-->
