--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:t="http://schemas.microsoft.com/winfx/2006/xaml/presentation, http://schemas.microsoft.com/netfx/2007/xaml/presentation"
              xmlns:local="clr-namespace:FoodPlanner"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
@@ -82,26 +83,26 @@
         <!--Start: Template for recipes list-->
         <DataTemplate x:Key="ListRecipesTemplate">
             <Grid>
-                <Border Margin="3" BorderBrush="#909090" BorderThickness="1" Padding="2">
-                    <Grid>
-                        <Grid.ColumnDefinitions >
-                            <ColumnDefinition Width="75"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-
-                        <Image Grid.RowSpan="2" Height="75" Width="75" Stretch="UniformToFill" Source="{Binding recipe.Image}" />
-
-                        <Label Grid.Column="1" Style="{StaticResource LabelTitle}" Content="{Binding recipe.Title}"/>
-                        <Label Grid.Column="1" Grid.Row="1" Content="{Binding getMatchPercentage}" ContentStringFormat="You have {0} of the needed ingredients"/>
-
-                    </Grid>
-                </Border>
+                <StackPanel  HorizontalAlignment="Stretch">
+                    <Border Name="ItemBorder" Margin="3" BorderBrush="#909090" BorderThickness="1" Padding="2" HorizontalAlignment="Stretch">
+                        <Grid Name="ItemGrid" Width="{Binding ElementName=ItemBorder,Path=ActualWidth}">
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="75"/>
+                                <ColumnDefinition Width="{Binding ElementName=ItemGrid,Path=MaxWidth}"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Image Grid.RowSpan="2" Height="75" Width="75" Stretch="UniformToFill" Source="{Binding recipe.Image}" />
+                            <Label Grid.Column="1" Grid.Row="1" Content="{Binding getMatchPercentage}" ContentStringFormat="You have {0} of the needed ingredients"/>
+                            <TextBlock Grid.Column="1" Text="{Binding recipe.Title}" TextTrimming="CharacterEllipsis" FontSize="30" />
+                        </Grid>
+                    </Border>
+                </StackPanel>
             </Grid>
         </DataTemplate>
+
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
                 <Setter.Value>
