--- a/FoodPlanner/FoodPlanner/Views/InventoryPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/InventoryPage.xaml
@@ -2,7 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
       xmlns:ViewModels="clr-namespace:FoodPlanner.ViewModels"
       x:Class="FoodPlanner.Views.InventoryPage"
       mc:Ignorable="d" d:DesignHeight="300" d:DesignWidth="300"
@@ -13,13 +14,12 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="30"/>
         </Grid.ColumnDefinitions>
 
         <!--<StackPanel Orientation="Horizontal" Margin="0,0,0.063,0.168">-->
@@ -28,16 +28,22 @@
                                          FilterMode="Contains" IsTextCompletionEnabled="True"
                                          MinimumPopulateDelay="500" MinimumPrefixLength="2" Populating="inventoryAutoCompleteBox_Populating" />-->
         <TextBox Text="{Binding SearchText, Mode=TwoWay, Delay=500, UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Column="1" x:Name="AddButton" Style="{DynamicResource ButtonIconTemplate}" IsEnabled="{Binding disableAddButton, Mode=OneWay}" Command="{Binding AddToInventory}">
+        <!--<Button Grid.Column="1" x:Name="AddButton" Style="{DynamicResource ButtonIconTemplate}" IsEnabled="{Binding disableAddButton, Mode=OneWay}" Command="{Binding AddToInventory}">
             <Button.Background>
                 <ImageBrush ImageSource="/Images/plusIcon.png" Stretch="Uniform"/>
             </Button.Background>
-        </Button>
+        </Button>-->
 
         <Border Grid.Column="0"  BorderThickness=" 2,2,1,2" BorderBrush="Black"/>
         <Border Grid.Column="1"  BorderThickness=" 1,2,2,2" BorderBrush="Black"/>
         <!--</StackPanel>-->
-        <ListBox Grid.ColumnSpan="2" Margin="5" Grid.Row="1" ItemsSource="{Binding FoundIngredients}" SelectedItem="{Binding SetSelectedItem}" />
+        <ListBox Grid.ColumnSpan="2" Margin="5" Grid.Row="1" ItemsSource="{Binding FoundIngredients}" SelectedItem="{Binding SelectedIngredient}" Visibility="{Binding AutoCompleteListVisibility}">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseUp">
+                    <i:InvokeCommandAction Command="{Binding AddIngredientToInventoryCommand}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </ListBox>
 
         <DataGrid Grid.ColumnSpan="2" x:Name="inventoryIngredientsDataGrid" RowDetailsVisibilityMode="VisibleWhenSelected" Margin="5,4.832,5.063,4.896" ItemsSource="{Binding InventoryIngredients, Mode=OneWay}" EnableRowVirtualization="True" AutoGenerateColumns="False" Grid.Row="2">
             <DataGrid.Columns>
