--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -12,8 +12,14 @@
     </Page.DataContext>
 
     <Grid>
-        <ListBox Style="{StaticResource STester}">
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <ListBox ItemsSource="{Binding CurrentUser}" Style="{StaticResource STester}">
             
         </ListBox>
+
+        <TextBlock Text="{Binding TestString, Mode=OneWay}" Grid.Row="1" Grid.RowSpan="1"/>
     </Grid>
 </Page>
